Busca de Atendente por Nome (Parcialmente)
